k8s/gateway/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: gdb-banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: ghcr.io/dominic12012006/gdb-gateway-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: gdb-banking
spec:
  selector:
    app: gateway-service
  ports:
    - port: 8080
